test/tests/compiler/16_characters_and_strings/valid/strings_as_lvalues/simple.plx
pub fn main(none) i32 {
    x: *char = "Hello, World!"
    return x[2]
}
